Changed some wording for consistency.

--- a/src/app/ground-failure/ground-failure/ground-failure.component.html
+++ b/src/app/ground-failure/ground-failure/ground-failure.component.html
@@ -41,7 +41,7 @@
     footer>
     <p>
       Due to local factors and model limitations, <strong>ground failure may
-        still occur when alert levels indicate little to no hazard.</strong>
+        still occur when alert levels indicate little or no hazard.</strong>
       Refer to <a href="/data/ground-failure/background.php">Ground Failure
         Background</a> for more information.
     </p>
