--- a/src/app/executive/ground-failure-pin/ground-failure-pin.component.html
+++ b/src/app/executive/ground-failure-pin/ground-failure-pin.component.html
@@ -8,9 +8,14 @@
     <dd>
       <figure [ngClass]="properties['landslide-alert']">
         <div class="svg-wrapper">
-          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-              viewBox="0 0 100 100" xml:space="preserve">
+          <svg version="1.1"
+            id="Layer_1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            x="0px"
+            y="0px"
+            viewBox="0 0 100 100"
+            xml:space="preserve">
             <style type="text/css">
               .st0 {
                 fill: none;
@@ -18,40 +23,45 @@
                 stroke-miterlimit: 10;
               }
             </style>
-            <path class="st0" d="M21.3,94c5.1-7.1,7.8-23.3,14.5-25.6c0.8-0.3,1.5-1,1.7-1.9c3-10.3,5-15,10-17c0.9-0.4,4.7-4,5-6.5
+            <path class="st0"
+              d="M21.3,94c5.1-7.1,7.8-23.3,14.5-25.6c0.8-0.3,1.5-1,1.7-1.9c3-10.3,5-15,10-17c0.9-0.4,4.7-4,5-6.5
                 c1-9.1,7.6-14.2,12.7-16.1c1.8-0.7,3.5-2.8,3.8-4.7C71.5,7,83,10.5,91.1,9.2V9v85H21.2" />
-            <path class="st0" d="M60.6,24.5c-2.6-0.3-5.3,0-6.7-2.6c-1.1-2-1.5-4.5-0.9-6.7c0.4-1.7,0.9-4,2.7-4.9c0.8-0.4,0.8,0.1,1.5,0.1
+            <path class="st0"
+              d="M60.6,24.5c-2.6-0.3-5.3,0-6.7-2.6c-1.1-2-1.5-4.5-0.9-6.7c0.4-1.7,0.9-4,2.7-4.9c0.8-0.4,0.8,0.1,1.5,0.1
                 c0.3,0,0.9,0,1.1,0c0.7,0.1,1.1,0.6,1.8,0.9c0.2,0.1,0.5,0.4,0.7,0.5c0.6,0.1,1-0.4,1.5-0.3c1.1,0.1,1.7,1.1,2.1,2
                 c0.6,1.2,0.4,1.7,0.1,2.8c-0.3,1.1,0.1,2.1-0.1,3.1c-0.2,0.8-0.7,2-1,2.8C62.8,23.5,61.8,24.6,60.6,24.5z" />
-            <path class="st0" d="M52.5,33c0,0.5,0,1-0.1,1.4c-0.1,0.5-0.3,0.8-0.7,1.1c-0.9,0.6-2.8,0.9-3.6,0c-0.3-0.3-0.1-0.5-0.1-0.9
+            <path class="st0"
+              d="M52.5,33c0,0.5,0,1-0.1,1.4c-0.1,0.5-0.3,0.8-0.7,1.1c-0.9,0.6-2.8,0.9-3.6,0c-0.3-0.3-0.1-0.5-0.1-0.9
                 c0-0.3,0-0.3,0.1-0.6c0.1-0.1,0.3-0.4,0.3-0.5c0-0.2-0.2-0.4-0.1-0.6c0-0.2,0.2-0.3,0.3-0.4c0.3-0.3,0.6-0.5,1.1-0.4
-                c0.1,0,0.2,0.1,0.4,0.1c0.3,0,0.5-0.2,0.7-0.2c0.2,0,0.4,0.1,0.6,0.2c0.2,0,0.3,0,0.5,0C52.1,32.3,52.5,32.6,52.5,33z"
-            />
-            <path class="st0" d="M37.6,49.5c-2.6-0.4-4.4-0.4-5.8-2.7c-0.4-0.7-1.6-2.6-1.6-3.2c0-1.7,1-1.1,1.8-2.6c0.9-1.7-0.4-1.1,0.1-2.7
+                c0.1,0,0.2,0.1,0.4,0.1c0.3,0,0.5-0.2,0.7-0.2c0.2,0,0.4,0.1,0.6,0.2c0.2,0,0.3,0,0.5,0C52.1,32.3,52.5,32.6,52.5,33z" />
+            <path class="st0"
+              d="M37.6,49.5c-2.6-0.4-4.4-0.4-5.8-2.7c-0.4-0.7-1.6-2.6-1.6-3.2c0-1.7,1-1.1,1.8-2.6c0.9-1.7-0.4-1.1,0.1-2.7
                 c0.6-1.7,1.9-1,3.3-1.4c1.5-0.4,2.4-1.5,4-1.4c1.9,0.1,3.4,1.7,3.2,3.7c0,0.1-0.7,1.3-0.8,1.8c-0.3,1.2,0,2.1-0.2,3.3
                 c-0.2,1-1.1,2.4-1.6,3.2c0.5-0.7-1.9,1.5-1,0.7C38.3,48.8,38.9,49.6,37.6,49.5z" />
-            <path class="st0" d="M25.9,73.1c-1,2.4-1.1,2.6-3.4,3.3c-1.8,0.6-2.9,0.9-4.9,0.9c-3.7-0.1-6.3-2.3-6.4-6.1
+            <path class="st0"
+              d="M25.9,73.1c-1,2.4-1.1,2.6-3.4,3.3c-1.8,0.6-2.9,0.9-4.9,0.9c-3.7-0.1-6.3-2.3-6.4-6.1
                 c-1.6,0.6-0.8-2.2-0.7-3.1c0.2-1.9,0.6-2.7,2-4c1.2-1.1,2.2-2.5,3.7-3.1c1.6-0.7,3.3-0.8,5-0.8c1.4,0,2.5,0.6,3.4,0.9
-                c1,0.4,1.4,0.1,1.9,1.3c0.3,0.6,0.1,1.5,0.4,2.2c0.6,1.6,1.7,2.8,1.5,4.7c-0.1,0.6-0.4,1.5-0.6,2.1C27.1,72.5,26.8,72.1,25.9,73.1z"
-            />
-            <path class="st0" d="M46.1,29.6c-0.5,1.3-0.7,1.4-2,1.8c-0.9,0.2-1.6,0.5-2.6,0.4c-1.9-0.1-3.3-1.3-3.4-3.3
+                c1,0.4,1.4,0.1,1.9,1.3c0.3,0.6,0.1,1.5,0.4,2.2c0.6,1.6,1.7,2.8,1.5,4.7c-0.1,0.6-0.4,1.5-0.6,2.1C27.1,72.5,26.8,72.1,25.9,73.1z" />
+            <path class="st0"
+              d="M46.1,29.6c-0.5,1.3-0.7,1.4-2,1.8c-0.9,0.2-1.6,0.5-2.6,0.4c-1.9-0.1-3.3-1.3-3.4-3.3
                 c-0.8,0.3-0.5-1.2-0.4-1.7c0.1-1,0.3-1.4,1-2c1.5-1.3,2.5-2.1,4.7-2c0.7,0,1.2,0.3,1.7,0.5c1.3,0.6,0.8,0.5,1.3,1.8
                 c0.3,0.8,1,1.4,0.9,2.3c0,0.4-0.2,1.1-0.4,1.4C46.7,29.3,46.4,29.2,46.1,29.6z" />
-            <path class="st0" d="M25.8,49.9c-0.1,0.2-0.1,0.5-0.2,0.6c-0.2,0.2-0.4,0.2-0.7,0.3C24.4,50.9,24,51,23.4,51c-0.5,0-0.8-0.2-1.1-0.5
+            <path class="st0"
+              d="M25.8,49.9c-0.1,0.2-0.1,0.5-0.2,0.6c-0.2,0.2-0.4,0.2-0.7,0.3C24.4,50.9,24,51,23.4,51c-0.5,0-0.8-0.2-1.1-0.5
                 c-0.4-0.4-0.5-0.6-0.5-1.1c-0.4,0.1-0.2-0.9-0.2-1.1c0.1-0.5,0.6-0.7,0.9-1.1c0.4-0.4,0.8-0.6,1.5-0.7c0.2,0,0.6,0,0.8,0
                 c0.1,0,0.5,0.3,0.5,0.3c0.2-0.2,0.5,0.1,0.6,0.3c0.1,0.2,0,0.4,0.1,0.5c0.1,0.2,0.2,0.3,0.3,0.5c0.1,0.3,0.2,0.6,0.1,1
                 c0,0.2-0.1,0.4-0.2,0.6C26.1,49.8,25.9,49.8,25.8,49.9z" />
-            <path class="st0" d="M36.8,58c0.1,0.4,0.4,0.9,0.4,1.2c0,0.6-0.4,0.8-0.7,1.3c-0.5,0.8-1,1.4-1.8,2c-0.7,0.5-1.4,0.7-2.3,0.6
+            <path class="st0"
+              d="M36.8,58c0.1,0.4,0.4,0.9,0.4,1.2c0,0.6-0.4,0.8-0.7,1.3c-0.5,0.8-1,1.4-1.8,2c-0.7,0.5-1.4,0.7-2.3,0.6
                 c-1.1-0.1-1.4-0.3-2.1-1.2c-0.5,0.8-1.4-1.1-1.6-1.5c-0.5-0.9,0-1.8,0-2.7c0.1-1.2,0.5-2,1.4-2.9c0.3-0.3,0.8-0.8,1.2-1
                 c0.2-0.1,1.1-0.1,1.1-0.2c0.1-0.5,0.9-0.5,1.2-0.2c0.3,0.2,0.4,0.5,0.7,0.7c0.3,0.2,0.7,0.2,1,0.4c0.6,0.4,1,0.7,1.3,1.3
                 c0.1,0.3,0.4,0.8,0.4,1.1C37.1,57.4,36.8,57.7,36.8,58z" />
           </svg>
         </div>
         <figcaption>
-          <ng-container
-              [ngSwitch]="properties['landslide-hazard-alert-color']">
+          <ng-container [ngSwitch]="properties['landslide-hazard-alert-color']">
             <p *ngSwitchCase="'green'">
-              Little to no area affected
+              Little or no area affected
             </p>
             <p *ngSwitchCase="'yellow'">
               Limited area affected
@@ -63,10 +73,9 @@
               Extensive area affected
             </p>
           </ng-container>
-          <ng-container
-              [ngSwitch]="properties['landslide-population-alert-color']">
+          <ng-container [ngSwitch]="properties['landslide-population-alert-color']">
             <p *ngSwitchCase="'green'">
-              Little to no population exposed
+              Little or no population exposed
             </p>
             <p *ngSwitchCase="'yellow'">
               Limited population exposed
@@ -88,10 +97,15 @@
     <dd>
       <figure [ngClass]="properties['liquefaction-alert']">
         <div class="svg-wrapper">
-          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-              viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;"
-              xml:space="preserve">
+          <svg version="1.1"
+            id="Layer_1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            x="0px"
+            y="0px"
+            viewBox="0 0 100 100"
+            style="enable-background:new 0 0 100 100;"
+            xml:space="preserve">
             <style type="text/css">
               .st0 {
                 fill: none;
@@ -105,12 +119,14 @@
                 stroke-miterlimit: 10;
               }
             </style>
-            <path class="st0" d="M80.7,85.7C80.7,85.7,80.7,85.7,80.7,85.7c-3.6,0-7.5-0.7-10.4-1.2c-3.1-0.6-6-1.1-9.7-1.1c0,0,0,0,0,0
+            <path class="st0"
+              d="M80.7,85.7C80.7,85.7,80.7,85.7,80.7,85.7c-3.6,0-7.5-0.7-10.4-1.2c-3.1-0.6-6-1.1-9.7-1.1c0,0,0,0,0,0
                         c-3.9,0-7.3,0.7-9.6,1.1c-2.5,0.5-6,1.2-10.4,1.2c0,0,0,0,0,0c-4.1,0-7.1-0.6-9.8-1.1l-0.5-0.1c-1.3-0.3-5.9-1.1-9.7-1.1
                         c0,0,0,0,0,0c-3.2,0-6.2,0.5-9.3,1.1l-1-5.5c3.4-0.6,6.7-1.2,10.4-1.2c0,0,0,0,0,0c4.3,0,9.3,0.9,10.8,1.2l0.5,0.1
                         c2.6,0.5,5.2,1,8.7,1c0,0,0,0,0,0c3.8,0,6.8-0.6,9.3-1.1c2.3-0.5,6.2-1.2,10.7-1.2c0,0,0,0,0,0c4.3,0,7.5,0.6,10.8,1.2
                         c2.7,0.5,6.2,1.1,9.3,1.1c0,0,0,0,0,0c3,0,7.4-0.6,9.3-1.1l1.3,5.4C89.1,84.9,84.2,85.7,80.7,85.7z" />
-            <path class="st1" d="M89.2,68.6c-1.9,0.4-6.3,1.1-9.3,1.1c0,0,0,0,0,0c-3.2,0-6.6-0.6-9.3-1.1c-0.7-0.1-1.3-0.3-2-0.4l1-3.6H90v-5.6
+            <path class="st1"
+              d="M89.2,68.6c-1.9,0.4-6.3,1.1-9.3,1.1c0,0,0,0,0,0c-3.2,0-6.6-0.6-9.3-1.1c-0.7-0.1-1.3-0.3-2-0.4l1-3.6H90v-5.6
                         H71l6-22.6l0.2,0.1l11,3L56.8,14.8L17.3,20l11,3l-0.2-0.1l-9.1,34l6.8,1.8l4.3-16c0.8-3,4.1-4.8,7.4-3.9c3.3,0.9,5.2,4,4.4,7l0-0.1
                         l-3.5,13.1H8.8v5.6h38.8l10.5,2.8c-3.8,0.1-7.1,0.8-9.2,1.2c-2.4,0.5-5.5,1.1-9.3,1.1c0,0,0,0,0,0c-3.6,0-6.2-0.5-8.7-1l-0.5-0.1
                         c-1.5-0.3-6.5-1.2-10.8-1.2c0,0,0,0,0,0c-3.6,0-7,0.6-10.4,1.2l1,5.5c3.1-0.6,6.2-1.1,9.3-1.1c0,0,0,0,0,0c3.8,0,8.4,0.9,9.7,1.1
@@ -120,10 +136,9 @@
           </svg>
         </div>
         <figcaption>
-          <ng-container
-              [ngSwitch]="properties['liquefaction-hazard-alert-color']">
+          <ng-container [ngSwitch]="properties['liquefaction-hazard-alert-color']">
             <p *ngSwitchCase="'green'">
-              Little to no area affected
+              Little or no area affected
             </p>
             <p *ngSwitchCase="'yellow'">
               Limited area affected
@@ -135,10 +150,9 @@
               Extensive area affected
             </p>
           </ng-container>
-          <ng-container
-              [ngSwitch]="properties['liquefaction-population-alert-color']">
+          <ng-container [ngSwitch]="properties['liquefaction-population-alert-color']">
             <p *ngSwitchCase="'green'">
-              Little to no population exposed
+              Little or no population exposed
             </p>
             <p *ngSwitchCase="'yellow'">
               Limited population exposed
