--- a/src/app/executive/pager-pin/pager-pin.component.html
+++ b/src/app/executive/pager-pin/pager-pin.component.html
@@ -1,6 +1,5 @@
-<basic-pin
-    [link]="link"
-    [product]="product">
+<basic-pin [link]="link"
+  [product]="product">
 
   <div card-title>
     <a [routerLink]="link">{{ title }}</a>
@@ -8,28 +7,36 @@
     </shared-alert-level>
   </div>
 
+  <ng-container *ngIf="!pending; else isPending">
     <figure *ngIf="product | sharedProductContent:'alertecon_smaller.png'
-        as content; else noAlertecon">
+            as content; else noAlertecon">
       <img class="alert-histogram"
-           src="{{ content.url }}"
-           alt="Economic Alert Histogram" />
+        src="{{ content.url }}"
+        alt="Economic Alert Histogram" />
       <figcaption>Estimated Economic Losses</figcaption>
     </figure>
 
-  <figure *ngIf="product | sharedProductContent:'alertfatal_smaller.png'
-      as content; else noAlertFatal ">
-    <img class="alert-histogram"
-         src="{{ content.url }}"
-         alt="Fatality Alert Histogram" />
-    <figcaption>Estimated Fatalities</figcaption>
-  </figure>
+    <figure *ngIf="product | sharedProductContent:'alertfatal_smaller.png'
+          as content; else noAlertFatal ">
+      <img class="alert-histogram"
+        src="{{ content.url }}"
+        alt="Fatality Alert Histogram" />
+      <figcaption>Estimated Fatalities</figcaption>
+    </figure>
 
-  <ng-template #noAlertecon>
-    <p class="alert error">Economic Losses Information not specified.</p>
+    <ng-template #noAlertecon>
+      <p class="alert error">Economic Losses Information not specified.</p>
+    </ng-template>
+
+    <ng-template #noAlertFatal>
+      <p class="alert error">Economic Fatalities Information not specified.</p>
+    </ng-template>
+  </ng-container>
+
+  <ng-template #isPending>
+    <p class="alert info">Alert information for this event is currently under review and will be available soon. Thank
+      you for your patience.</p>
   </ng-template>
 
-  <ng-template #noAlertFatal>
-    <p class="alert error">Economic Fatalities Information not specified.</p>
-  </ng-template>
 
 </basic-pin>
