updated test files

--- a/src/app/executive/pager-pin/pager-pin.component.html
+++ b/src/app/executive/pager-pin/pager-pin.component.html
@@ -34,7 +34,8 @@
   </ng-container>
 
   <ng-template #isPending>
-    <p class="alert info">Alert information for this event is currently under review and will be available soon. Thank
+    <p class="alert info">Alert information for this event is currently under
+      review and will be available soon. Thank
       you for your patience.</p>
   </ng-template>
 
