Update shakemap summary to fit better on small screens, increase font-size now that layout has changed

--- a/src/app/shared/css/station-overlay.scss
+++ b/src/app/shared/css/station-overlay.scss
@@ -119,3 +119,13 @@
   overflow-y: scroll;
   background: #fafafa;
 }
+
+shakemap-station {
+  width: 200px;
+}
+
+@media screen and (min-width: 768px) {
+  shakemap-station {
+    width: 420px;
+  }
+}
