finished liquefaction pending status

--- a/src/app/executive/ground-failure-pin/ground-failure-pin.component.html
+++ b/src/app/executive/ground-failure-pin/ground-failure-pin.component.html
@@ -92,11 +92,6 @@
             </p>
           </ng-container>
         </figcaption>
-        <ng-template #captionPending>
-          <figcaption>
-            <p class="alert warning">Alert Pending</p>
-          </figcaption>
-        </ng-template>
       </figure>
     </dd>
 
@@ -179,4 +174,9 @@
     </dd>
   </dl>
 
+  <ng-template #captionPending>
+    <figcaption>
+      <p>Alert Pending</p>
+    </figcaption>
+  </ng-template>
 </basic-pin>
