Add text filter to DYFI table

--- a/src/app/dyfi/responses/responses.component.html
+++ b/src/app/dyfi/responses/responses.component.html
@@ -6,6 +6,10 @@
     Download
   </button>
 
+  <mat-form-field>
+    <input matInput (keyup)="filter($event.target.value)" placeholder="Filter">
+  </mat-form-field>
+
   <div class="horizontal-scrolling">
     <mat-table matSort
       class="responses-table"
