--- a/src/app/executive/ground-failure-pin/ground-failure-pin.component.html
+++ b/src/app/executive/ground-failure-pin/ground-failure-pin.component.html
@@ -57,11 +57,9 @@
                 c0.2-0.1,1.1-0.1,1.1-0.2c0.1-0.5,0.9-0.5,1.2-0.2c0.3,0.2,0.4,0.5,0.7,0.7c0.3,0.2,0.7,0.2,1,0.4c0.6,0.4,1,0.7,1.3,1.3
                 c0.1,0.3,0.4,0.8,0.4,1.1C37.1,57.4,36.8,57.7,36.8,58z" />
           </svg>
-          <ng-template #isPending>
-            <p class="alert warning"></p>
-          </ng-template>
         </div>
-        <figcaption *ngIf="properties['landslide-alert'] !== 'pending';
+        <figcaption *ngIf="properties['landslide-alert'] !== 'pending'
+            && properties['landslide-alert'] !== 'PENDING';
             else captionPending">
           <ng-container [ngSwitch]="properties['landslide-hazard-alert-color']">
             <p *ngSwitchCase="'green'">
@@ -139,8 +137,8 @@
                         c0.3-1.3,1.7-2,2.9-1.7l11.2,3c1.3,0.3,2,1.7,1.7,2.9l-1.4,5.4c-0.1,0.4-0.4,0.8-0.7,1.1h-4.4L50.1,56.5z" />
           </svg>
         </div>
-        <figcaption *ngIf="properties['liquefaction-alert'] !== 'pending';
-                    else captionPending">
+        <figcaption *ngIf="properties['liquefaction-alert'] !== 'pending'
+          && properties['liquefaction-alert'] !== 'PENDING'; else captionPending">
           <ng-container [ngSwitch]="properties['liquefaction-hazard-alert-color']">
             <p *ngSwitchCase="'green'">
               Little or no area affected
