--- a/src/app/technical/technical/technical.component.html
+++ b/src/app/technical/technical/technical.component.html
@@ -1,43 +1,40 @@
 <ng-container *ngIf="eventService?.event$ | async as event">
-  <ng-container *ngIf="event">
+    <ng-container *ngIf="event">
 
-    <technical-origin-summary
-        [event]="event"
-        [products]="event?.getProducts('origin')">
-    </technical-origin-summary>
+        <technical-origin-summary [event]="event"
+            [products]="event?.getProducts('origin')">
+        </technical-origin-summary>
 
-    <technical-moment-tensor-summary
-        [event]="event"
-        [products]="event?.getProducts('moment-tensor')">
-    </technical-moment-tensor-summary>
+        <technical-moment-tensor-summary [event]="event"
+            [products]="event?.getProducts('moment-tensor')">
+        </technical-moment-tensor-summary>
 
-    <ng-container *ngIf="event.getProducts('finite-fault') as products">
-      <technical-finite-fault-summary
-          [event]="event"
-          [products]="products">
-      </technical-finite-fault-summary>
-    </ng-container>
+        <ng-container *ngIf="event.getProducts('finite-fault') != 0 &&
+        event.getProducts('finite-fault') as products">
+            <technical-finite-fault-summary [event]="event"
+                [products]="products">
+            </technical-finite-fault-summary>
+        </ng-container>
 
-    <technical-focal-mechanism-summary
-        [event]="event"
-        [products]="event?.getProducts('focal-mechanism')">
-    </technical-focal-mechanism-summary>
+        <technical-focal-mechanism-summary [event]="event"
+            [products]="event?.getProducts('focal-mechanism')">
+        </technical-focal-mechanism-summary>
 
-    <shared-text-product
-        *ngFor="let product of event?.getProducts('scitech-text');
-        trackBy: trackByIndex" [product]="product">
-    </shared-text-product>
+        <shared-text-product *ngFor="let product of event?.getProducts('scitech-text');
+        trackBy: trackByIndex"
+            [product]="product">
+        </shared-text-product>
 
-    <ng-container *ngIf="event?.hasProducts('scitech-link')">
-      <h3>For More Information</h3>
-      <ul>
-      <li *ngFor="let product of event?.getProducts('scitech-link');
+        <ng-container *ngIf="event?.hasProducts('scitech-link')">
+            <h3>For More Information</h3>
+            <ul>
+                <li *ngFor="let product of event?.getProducts('scitech-link');
           trackBy: trackByIndex">
-        <shared-link-product [product]="product">
-        </shared-link-product>
-      </li>
-      </ul>
-    </ng-container>
+                    <shared-link-product [product]="product">
+                    </shared-link-product>
+                </li>
+            </ul>
+        </ng-container>
 
-  </ng-container>
+    </ng-container>
 </ng-container>
