--- a/src/app/technical/origin-summary/origin-summary.component.html
+++ b/src/app/technical/origin-summary/origin-summary.component.html
@@ -1,90 +1,89 @@
-<ng-container *ngIf="products && products?.length != 0">
-  <h2>Origin</h2>
-  <div class="horizontal-scrolling">
-    <mat-table [dataSource]="this.products"
-      class="os-table">
-      <!-- render order is defined by columnsToDisplay -->
-      <mat-header-row *matHeaderRowDef="this.columnsToDisplay"></mat-header-row>
-      <mat-row *matRowDef="let myRowData; columns: this.columnsToDisplay">
-      </mat-row>
+<h2>Origin</h2>
+<div class="horizontal-scrolling">
+  <mat-table [dataSource]="this.products"
+    class="os-table">
+    <!-- render order is defined by columnsToDisplay -->
+    <mat-header-row *matHeaderRowDef="this.columnsToDisplay"></mat-header-row>
+    <mat-row *matRowDef="let myRowData; columns: this.columnsToDisplay">
+    </mat-row>
 
-      <ng-container matColumnDef="catalog">
-        <mat-header-cell *matHeaderCellDef>Catalog</mat-header-cell>
-        <mat-cell *matCellDef="let product"
-          [class.unpreferred]="product !== products[0]">
-          <ng-container *ngIf="product === products[0]">
-            <shared-preferred-check [title]="'Preferred Origin'">
-            </shared-preferred-check>
-          </ng-container>
-          <a [routerLink]="['/', event?.id, 'origin']"
-            [queryParams]="{ source: product?.source, code: product?.code }">
-            {{ product?.properties?.eventsource?.toUpperCase() }}
-          </a>
-        </mat-cell>
-      </ng-container>
-      'catalog',
-      'magnitude',
-      'time',
-      'depth',
-      'status',
-      'location',
-      'source'
-      <ng-container matColumnDef="magnitude">
-        <mat-header-cell *matHeaderCellDef>
-          <abbr title="Magnitude">Mag</abbr>
-        </mat-header-cell>
-        <mat-cell *matCellDef="let product">
-          {{
-          formatterService.number(
-          product?.properties?.magnitude,
-          1)
-          }}
-          {{ product?.properties['magnitude-type'] }}
-        </mat-cell>
-      </ng-container>
+    <ng-container matColumnDef="catalog">
+      <mat-header-cell *matHeaderCellDef>Catalog</mat-header-cell>
+      <mat-cell *matCellDef="let product"
+        [class.unpreferred]="product !== products[0]">
+        <ng-container *ngIf="product === products[0]">
+          <shared-preferred-check [title]="'Preferred Origin'">
+          </shared-preferred-check>
+        </ng-container>
+        <a [routerLink]="['/', event?.id, 'origin']"
+          [queryParams]="{ source: product?.source, code: product?.code }">
+          {{ product?.properties?.eventsource?.toUpperCase() }}
+        </a>
+      </mat-cell>
+    </ng-container>
+    'catalog',
+    'magnitude',
+    'time',
+    'depth',
+    'status',
+    'location',
+    'source'
+    <ng-container matColumnDef="magnitude">
+      <mat-header-cell *matHeaderCellDef>
+        <abbr title="Magnitude">Mag</abbr>
+      </mat-header-cell>
+      <mat-cell *matCellDef="let product">
+        {{
+        formatterService.number(
+        product?.properties?.magnitude,
+        1)
+        }}
+        {{ product?.properties['magnitude-type'] }}
+      </mat-cell>
+    </ng-container>
 
-      <ng-container matColumnDef="time">
-        <mat-header-cell *matHeaderCellDef>Time</mat-header-cell>
-        <mat-cell *matCellDef="let product">
-          {{ formatterService.time(toDate(product?.properties?.eventtime)) }}
-        </mat-cell>
-      </ng-container>
+    <ng-container matColumnDef="time">
+      <mat-header-cell *matHeaderCellDef>Time</mat-header-cell>
+      <mat-cell *matCellDef="let product">
+        {{ formatterService.time(toDate(product?.properties?.eventtime)) }}
+      </mat-cell>
+    </ng-container>
 
-      <ng-container matColumnDef="depth">
-        <mat-header-cell *matHeaderCellDef>Depth</mat-header-cell>
-        <mat-cell *matCellDef="let product">
-          {{ formatterService.depth(product?.properties?.depth, 'km') }}
-        </mat-cell>
-      </ng-container>
+    <ng-container matColumnDef="depth">
+      <mat-header-cell *matHeaderCellDef>Depth</mat-header-cell>
+      <mat-cell *matCellDef="let product">
+        {{ formatterService.depth(product?.properties?.depth, 'km') }}
+      </mat-cell>
+    </ng-container>
 
-      <ng-container matColumnDef="status">
-        <mat-header-cell *matHeaderCellDef>
-          Review Status
-        </mat-header-cell>
-        <mat-cell *matCellDef="let product">
-          {{ (product?.properties['review-status'] || 'automatic').toUpperCase() }}
-        </mat-cell>
-      </ng-container>
+    <ng-container matColumnDef="status">
+      <mat-header-cell *matHeaderCellDef>
+        Review Status
+      </mat-header-cell>
+      <mat-cell *matCellDef="let product">
+        {{ (product?.properties['review-status'] || 'automatic').toUpperCase()
+        }}
+      </mat-cell>
+    </ng-container>
 
-      <ng-container matColumnDef="location">
-        <mat-header-cell *matHeaderCellDef>
-          Location
-        </mat-header-cell>
-        <mat-cell *matCellDef="let product"
-          [innerHTML]="formatterService.location(
-              product?.properties?.latitude,
-              product?.properties?.longitude)">
-        </mat-cell>
-      </ng-container>
+    <ng-container matColumnDef="location">
+      <mat-header-cell *matHeaderCellDef>
+        Location
+      </mat-header-cell>
+      <mat-cell *matCellDef="let product"
+        [innerHTML]="formatterService.location(
+            product?.properties?.latitude,
+            product?.properties?.longitude)">
+      </mat-cell>
+    </ng-container>
 
-      <ng-container matColumnDef="source">
-        <mat-header-cell *matHeaderCellDef>Source</mat-header-cell>
-        <mat-cell *matCellDef="let product">
-          <shared-product-attribution [product]="product">
-          </shared-product-attribution>
-        </mat-cell>
-      </ng-container>
+    <ng-container matColumnDef="source">
+      <mat-header-cell *matHeaderCellDef>Source</mat-header-cell>
+      <mat-cell *matCellDef="let product">
+        <shared-product-attribution [product]="product">
+        </shared-product-attribution>
+      </mat-cell>
+    </ng-container>
 
-    </mat-table>
-  </div>
-</ng-container>
+  </mat-table>
+</div>
