Expand the earthquake poster download panel

--- a/src/app/executive/executive/executive.component.html
+++ b/src/app/executive/executive/executive.component.html
@@ -92,6 +92,6 @@
     </ul>
   </ng-container>
 
-  <product-page-download *ngIf="event.hasProducts('poster')" [product]="event.getProduct('poster')">
+  <product-page-download *ngIf="event.hasProducts('poster')" [product]="event.getProduct('poster')" [expanded]="true">
   </product-page-download>
 </ng-container>
