simplify the download component

--- a/src/app/product-page/download/download.component.html
+++ b/src/app/product-page/download/download.component.html
@@ -1,4 +1,4 @@
-<mat-expansion-panel (opened)="onOpen()" (closed)="onClose()" [expanded]="expanded">
+<mat-expansion-panel (opened)="loadContentsXml()" [expanded]="expanded">
   <mat-expansion-panel-header>
     <h3>Downloads</h3>
   </mat-expansion-panel-header>
