--- a/src/app/shakemap/pgv/pgv.component.html
+++ b/src/app/shakemap/pgv/pgv.component.html
@@ -12,10 +12,14 @@
 
     <shared-map
         [overlays]="shakemap | shakemapOverlays:['shakemap-pgv',
-          'shakemap-stations']"
+        'shakemap-stations']"
         [baselayer]="'Grayscale'"
         [showScaleControl]="true"
-        [showAttributionControl]="false">
+        [showAttributionControl]="false"
+        [bounds]="[[shakemap.properties['maximum-latitude'],
+        shakemap.properties['maximum-longitude']],
+        [shakemap.properties['minimum-latitude'],
+        shakemap.properties['minimum-longitude']]]">
     </shared-map>
   </a>
 
