--- a/src/app/shakemap/psa/psa.component.html
+++ b/src/app/shakemap/psa/psa.component.html
@@ -20,7 +20,11 @@
           'shakemap-stations']"
           [baselayer]="'Grayscale'"
           [showScaleControl]="true"
-          [showAttributionControl]="false">
+          [showAttributionControl]="false"
+          [bounds]="[[shakemap.properties['maximum-latitude'],
+          shakemap.properties['maximum-longitude']],
+          [shakemap.properties['minimum-latitude'],
+          shakemap.properties['minimum-longitude']]]">
       </shared-map>
     </a>
   </ng-container>
@@ -54,7 +58,11 @@
           'shakemap-stations']"
           [baselayer]="'Grayscale'"
           [showScaleControl]="true"
-          [showAttributionControl]="false">
+          [showAttributionControl]="false"
+          [bounds]="[[shakemap.properties['maximum-latitude'],
+          shakemap.properties['maximum-longitude']],
+          [shakemap.properties['minimum-latitude'],
+          shakemap.properties['minimum-longitude']]]">
       </shared-map>
     </a>
   </ng-container>
@@ -88,7 +96,11 @@
           'shakemap-stations']"
           [baselayer]="'Grayscale'"
           [showScaleControl]="true"
-          [showAttributionControl]="false">
+          [showAttributionControl]="false"
+          [bounds]="[[shakemap.properties['maximum-latitude'],
+          shakemap.properties['maximum-longitude']],
+          [shakemap.properties['minimum-latitude'],
+          shakemap.properties['minimum-longitude']]]">
       </shared-map>
     </a>
   </ng-container>
